syntax = "proto3";

package Protos.Dto.Request;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Dto.Request";

import "Protos/Models/AutorModel.proto";

message AddAutorRequest
{
	Protos.Models.AutorModel AutorModel = 1;
}
