syntax = "proto3";

package Protos.Dto.Request;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Dto.Request";

message GetAutorRequest
{
	int32 AutorLibroId = 1;
}
