syntax = "proto3";

package Protos.Dto.Response;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Dto.Response";

import "Protos/Models/AutorModel.proto";

message AutorModelListResponse
{
	bool success = 1;
	repeated Protos.Models.AutorModel AutorModelList = 2;
}